--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 body {
   padding: 0;
   margin: 0;
-  background: linear-gradient(to right#FFB6C1, #FFF0F5);
+  background: linear-gradient(to right,#FFF8DC,#FFB6C1);
 }
 
 .calculator-grid {
